--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.17.2",
     "fs": "^0.0.1-security",
     "path": "^0.12.7",
+    "request": "^2.88.2",
     "rss": "^1.2.2"
   },
   "devDependencies": {
