--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/BrennanTanner/Alluvium-Podcast#readme",
   "dependencies": {
     "body-parser": "^1.19.1",
+    "date-and-time": "^2.1.2",
     "ejs": "^2.5.6",
     "express": "^4.17.2",
     "fs": "^0.0.1-security",
